--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=1234
 DB_HOST=mongodb+srv://wridtw:kw6418qydb@chat.8pg8p.gcp.mongodb.net/graphql_api?retryWrites=true&w=majority
+JWT_SECRET=superSecretMessage
