--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/FursAleksey/chat_graphql_api#readme",
   "dependencies": {
     "apollo-server-express": "^2.17.0",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "graphql-depth-limit": "^1.1.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-validation-complexity": "^0.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2"
