--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.1.2"
   },
   "devDependencies": {
+    "eslint": "^7.12.1",
     "husky": "^4.3.0",
     "pretty-quick": "^3.0.2"
   }
