--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "chat_graphql_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "npx nodemon index.js"
+    "dev": "npx nodemon src/index.js"
   },
   "repository": {
     "type": "git",
